added products section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,38 @@
         </div>
     </section>
 
+    <section class="cosmetics">
+      <div class="container">
+          <div class="cosmetics-heading">
+              <h3>Cosmetics & Other Products</h3>
+              <h1>World Class Products Available</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque velit deleniti assumenda obcaecati iusto.</p>
+          </div>
+          
+          <div class="cosmetics-grid">
+              <div class="cosmetics-grid-product first-product">
+                  <h4>Perfume</h4>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, nisi! Lorem ipsum dolor sit amet.</p>
+              </div>
+  
+            <div class="cosmetics-grid-product second-product">
+                <h4>Lotion</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, quaerat!</p>
+            </div>
+  
+            <div class="cosmetics-grid-product third-product">
+                <h4>Soap</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, repudiandae!</p>
+            </div>
+          </div>
+        
+      </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2020 Dtoolz, All Rights Reserved.</p>
+    </footer>
+
 
     <script  src="./main.js"></script>
 </body>
